<resources>
	<string name="app_name">CubeAcademy</string>
	<string name="your_nominations_title">Your nominations</string>
	<string name="empty_body">once you submit a nomination, you will be able to SEE it here.</string>
	<string name="create_new_nomination">Create New Nomination</string>
	<string name="create_a_nomination">Create a nomination</string>
	<string name="submit_nomination">Submit Nomination</string>
	<string name="back">Back</string>
	<string name="id_like_to_nominate">I’d like to nominate...</string>
	<string name="id_like_to_nominate_subtitle">Please select a cube who you feel has done something honourable this month or just all round has a great work ethic.</string>
	<string name="reason_title">I’d like to nominate THIS CUBE BECAUSE...</string>
	<string name="reason_subtitle">Please let us know why you think this cube deserves the ‘cube of the month’ title 🏆⭐</string>
	<string name="process_title">IS HOW WE CURRENTLY RUN CUBE OF THE MONTH FAIR?</string>
	<string name="process_subtitle">As you know, out the nominees chosen, we spin a wheel to pick the cube of the month. What’s your opinion on this method?</string>
	<string name="nomination_submitted">Nomination Submitted</string>
	<string name="back_to_home">Back to home</string>
	<string name="nomination_submitted_body">Thank you for taking the time to fill out this form! Why not nominate another cube?</string>
    <string name="cube_s_name">Cube’s name</string>
	<string name="asterisk">*</string>
	<string name="reasoning">Reasoning</string>
	<string name="very_unfair">Very Unfair</string>
	<string name="unfair">Unfair</string>
	<string name="not_sure">Not Sure</string>
	<string name="fair">Fair</string>
	<string name="very_fair">Very Fair</string>
	<string name="select_option">Select Option</string>
	<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="if_you_leave_this_page_you_will_loose_any_progress_made">If you leave this page, you will loose any progress made.</string>
	<string name="yes_leave_page">Yes, leave page</string>
	<string name="cancel">Cancel</string>
	<string name="very_unfair_value">very_unfair</string>
	<string name="unfair_value">unfair</string>
	<string name="not_sure_value">not_sure</string>
	<string name="fair_value">fair</string>
	<string name="very_fair_value">very_fair</string>
    <string name="no_internet_connection_please_try_again_later">No Internet Connection, Please try again later!!</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong, Please try again later!!</string>
</resources>