<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".activities.CreateNominationActivity">

	<androidx.appcompat.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/black"
		android:paddingBottom="10dp"
		android:paddingTop="30dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/bold_headline_small"
			android:layout_gravity="center_horizontal"
			android:text="@string/create_a_nomination"
			android:textColor="@color/white" />
	</androidx.appcompat.widget.Toolbar>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="180dp"
				android:importantForAccessibility="no"
				android:scaleType="centerCrop"
				android:src="@drawable/artwork_create" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="50dp"
				android:paddingHorizontal="16dp">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/bold_headline_small"
					android:layout_marginTop="30dp"
					android:text="@string/id_like_to_nominate"
					android:textColor="@color/black" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/body"
					android:layout_marginTop="8dp"
					android:text="@string/id_like_to_nominate_subtitle"
					android:textColor="@color/black" />

				<!-- TODO: Add the drop down selector of nominees -->

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/grey_mild"
					android:layout_marginTop="40dp" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/bold_headline_small"
					android:layout_marginTop="30dp"
					android:text="@string/reason_title"
					android:textColor="@color/black" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/body"
					android:layout_marginTop="8dp"
					android:text="@string/reason_subtitle"
					android:textColor="@color/black" />

				<!-- TODO: Add the Edit text for the reason -->

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/grey_mild"
					android:layout_marginTop="40dp" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/bold_headline_small"
					android:layout_marginTop="30dp"
					android:text="@string/process_title"
					android:textColor="@color/black" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/body"
					android:layout_marginTop="8dp"
					android:text="@string/process_subtitle"
					android:textColor="@color/black" />

				<!-- TODO: Add the Radio button for the feedback -->
			</LinearLayout>

		</LinearLayout>

	</androidx.core.widget.NestedScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:elevation="10dp"
		android:gravity="center_vertical"
		android:orientation="horizontal"
		android:paddingHorizontal="24dp"
		android:paddingVertical="20dp">

		<androidx.appcompat.widget.AppCompatButton
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/back_button"
			style="@style/button_outline"
			android:layout_marginEnd="7dp"
			android:layout_weight="1"
			android:text="@string/back" />

		<androidx.appcompat.widget.AppCompatButton
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/submit_button"
			style="@style/button"
			android:enabled="false"
			android:layout_marginStart="7dp"
			android:layout_weight="2"
			android:text="@string/submit_nomination" />

	</LinearLayout>
</LinearLayout>